[package]
name = "cover_map_obs_plan_rs"
version = "0.1.0"
edition = "2021"

[lib]
name = "cover_map_obs_plan_rs"
crate-type = ["rlib", "staticlib", "cdylib"]

[[bin]]
name = "cover_map_obs_plan_cli"
path = "src/main.rs"

[[bin]]
name = "cover_map_obs_plan_server"
path = "src/server.rs"

[dependencies]
geo = "0.27"
geo-types = "0.7"
nalgebra = "0.32"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
libc = "0.2"
axum = { version = "0.7", features = ["multipart"] }
tower-http = { version = "0.5", features = ["cors"] }
tokio = { version = "1", features = ["full"] }

[build-dependencies]
cc = "1.0"



